Add fonts groups and fix related scroll & height

--- a/packages/excalidraw/locales/en.json
+++ b/packages/excalidraw/locales/en.json
@@ -565,6 +565,8 @@
     "badge": {
       "new": "new"
     },
+    "sceneFonts": "In this scene",
+    "availableFonts": "Available fonts",
     "empty": "No fonts found"
   },
   "userList": {
